# serverless-cloudflare

./: .gitignore  Cargo.toml  Makefile  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
src/: package.json  wrangler.toml
src/authentication/: Cargo.toml  wrangler.toml
src/authentication/postgres_migrations/: 0001_1.0.sql  0002_1.0.sql
src/authentication/src/: lib.rs  users.rs
src/authentication/test/: integration.test.ts
src/axum-postgres/: Cargo.toml  wrangler.toml
src/axum-postgres/src/: core.rs  lib.rs
src/backend/: .dev.vars  Cargo.toml  wrangler.toml
src/backend/migrations/: 0001_1.0.sql  0002_1.0.sql  0003_1.0.sql  0003_4.0.sql
src/backend/src/: auth.rs  chatroom.rs  chats.rs  lib.rs  messaging.rs  users.rs
src/backend/test/: integration.test.ts
src/functions/api/register/: [[all]].ts
src/infra/: .terraform.lock.hcl  main.tf  outputs.tf  provider.tf  variables.tf
src/queue_processor/: .dev.vars  Cargo.toml  wrangler.toml
src/queue_processor/src/: lib.rs
src/router-kv/: Cargo.toml  wrangler.toml
src/router-kv/src/: core.rs  lib.rs
src/router-kv/worker/: metadata_wasm.json
src/rusty-chatroom/: Cargo.toml  package-lock.json  tsconfig.json  wrangler.toml
src/rusty-chatroom/backend/migrations/: 0001_1.0.sql
src/rusty-chatroom/backend/src/: chatroom.rs  messaging.rs
src/rusty-chatroom/backend/worker/: worker.js
src/rusty-chatroom/infra/: .terraform.lock.hcl  main.tf  outputs.tf  provider.tf
src/rusty-chatroom/public/: app.js  index.html  style.css
src/rusty-chatroom/site/: app.js
src/rusty-chatroom/site/chats/: index.html
src/rusty-chatroom/src/: chatroom.rs  html.rs  lib.rs
src/serverlessapps-on-cloudflare-book/authentication-service/: Cargo.toml  package-lock.json  package.json  wrangler.toml
src/serverlessapps-on-cloudflare-book/authentication-service/src/: lib.rs
src/serverlessapps-on-cloudflare-book/frontend/: package-lock.json  package.json  wrangler.toml
src/serverlessapps-on-cloudflare-book/frontend/backend/: Cargo.toml  wrangler.toml
src/serverlessapps-on-cloudflare-book/frontend/backend/src/: lib.rs
src/serverlessapps-on-cloudflare-book/frontend/functions/api/: todo.ts
src/serverlessapps-on-cloudflare-book/frontend/site/: index.html
src/serverlessapps-on-cloudflare-book/photo-service/: Cargo.toml  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
src/serverlessapps-on-cloudflare-book/photo-service/migrations/: 0001_initial_creation.sql
src/serverlessapps-on-cloudflare-book/photo-service/src/: handlers.rs  lib.rs  state.rs
src/serverlessapps-on-cloudflare-book/photo-service/test/: index.spec.ts
src/serverlessapps-on-cloudflare-book/photo-service/worker/: metadata_wasm.json
src/site/: app.js  chats.js  index.html  login.js  register.js  style.css
src/site/chats/: index.html
src/site/login/: index.html
src/site/register/: index.html
