[package]
name = "axum-postgres-worker"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.1", features = ["tokio-postgres", "http", "axum"] }
worker-macros = { version="0.1", features = ["http"] }
serde = { version = "1", features = ["derive"] }
tokio-postgres = { version="0.7", features=['js'], default-features=false }
axum  = { version = "0.7", default-features = false, features = ["json", "macros"] }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
wasm-bindgen-futures = "0.4"
anyhow = "1.0.82"
thiserror = "1.0.59"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",
    "fast-rng"
]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }