[package]
name = "rusty-chatroom"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
tracing = "0.1"
tracing-web = "0.1"
tracing-subscriber = { version = "0.3", features=['time', 'json'] }
time = { version = "0.3", features=['wasm-bindgen'] }
worker = { version="0.3", features = ["http", "timezone", "d1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.116"
console_error_panic_hook = { version = "0.1.1" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
anyhow = "1.0"
thiserror = "1.0.59"
getrandom = {version="0.2.15", features = ["js"]}
lazy_static = "1.4.0"
http = "1.1.0"
async-trait = "0.1.81"
futures-util = "0.3"
jsonwebtoken = "9.3.0"
bcrypt = "0.15"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",
    "fast-rng"
]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }