[workspace]

[package]
name = "photo-service"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
tracing = {version="0.1.40", default-features = false}
tracing-subscriber = {version="0.3", default-features = false, features = ["fmt"]}
worker = { version="0.3", features = ["http", "d1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.116"
console_error_panic_hook = { version = "0.1.1" }
wasm-bindgen-futures = { version="0.4" }
anyhow = "1.0.82"
thiserror = "1.0.59"
getrandom = {version="0.2.15", features = ["js"]}
lazy_static = "1.4.0"
http = "1.1.0"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",
    "fast-rng"
]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.12.4"
